[project]
name = "luna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "sqlalchemy>=2.0.48",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29",
    "faststream[rabbit]>=0.5",
    "httpx>=0.27",
]
