[project]
name = "luna"
version = "0.1.0"
description = "Асинхронный сервис процессинга платежей"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "sqlalchemy>=2.0.48",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29",
    "faststream[rabbit]>=0.5",
    "httpx>=0.27",
    "alembic>=1.13",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
